--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/userdb?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+
+#???? ???????? HTTP ?????? PUT, PATCH, DELETE
+spring.mvc.hiddenmethod.filter.enabled=true
+
+
+
 
