--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
 
 spring.mvc.hiddenmethod.filter.enabled=true
+spring.devtools.restart.enabled=true
 
 
 
