--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.devtools.restart.enabled=true
+app.defaultRoleName=ROLE_USER
 
 
 
